# LyricsGraphing

./: Album.cpp  Album.h  BarGraph.cpp  BarGraph.h  BooleanButton.cpp  BooleanButton.h  Button.cpp  Button.h  CMakeLists.txt  Graphics.cpp  Graphics.h  GraphicsTest.cpp  GraphicsTest.h  PopSong.cpp  PopSong.h  Quad.cpp  Quad.h  README.md  RapSong.cpp  RapSong.h  Song.cpp  Song.h  SubmitButton.cpp  SubmitButton.h  lyrics.py  main.cpp  spot_cred.py  spotify.py  submission.txt
